hphp/hack/test/typecheck/reactive/rx_if_implements11.php.exp
File "rx_if_implements11.php", line 6, characters 3-49:
Only one of following annotations is allowed: `__Pure`, `__NonRx`, `__Cipp`, `__CippLocal`, `__CippGlobal`. (Parsing[1002])
